# trans6

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
docker/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
examples/: input.txt
grammar/: Example.g4
src/: ExampleInterpreter.h  main.cpp  main_actions.cpp
